@@ -1,3 +1,6 @@
+01 Aug 2003 mipsator
+ * added test_pmkscan target plus some cosmetics in Makefile.
+
 # snapshot 0.5.3
 
 01 Aug 2003 mipsator
